k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\kashi\kompose.exe convert -f ../docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: client
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: client
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\kashi\kompose.exe convert -f ../docker-compose.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/app-network: "true"
        io.kompose.service: client
    spec:
      containers:
        - args:
            - npm
            - run
            - dev
          image: kashish18/client:first
          name: myapp-react-client
          ports:
            - containerPort: 5173
          resources: {}
          volumeMounts:
            - mountPath: /usr/app
              name: client-claim0
            - mountPath: /usr/app/node_modules
              name: client-claim1
      restartPolicy: Always
      volumes:
        - name: client-claim0
          persistentVolumeClaim:
            claimName: client-claim0
        - name: client-claim1
          persistentVolumeClaim:
            claimName: client-claim1
status: {}
