k8s/server3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\kashi\kompose.exe convert -f ../docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: server3
  name: server3
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: server3
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\kashi\kompose.exe convert -f ../docker-compose.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/app-network: "true"
        io.kompose.service: server3
    spec:
      containers:
        - args:
            - node
            - index.js
          image: kashish18/server3:first
          name: myapp-node-server3
          ports:
            - containerPort: 7000
          resources: {}
          volumeMounts:
            - mountPath: /usr/src/app
              name: server3-claim0
            - mountPath: /usr/src/app/node_modules
              name: server3-claim1
      restartPolicy: Always
      volumes:
        - name: server3-claim0
          persistentVolumeClaim:
            claimName: server3-claim0
        - name: server3-claim1
          persistentVolumeClaim:
            claimName: server3-claim1
status: {}
