k8s/server3-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\kashi\kompose.exe convert -f ../docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: server3
  name: server3
spec:
  ports:
    - name: "7000"
      port: 7000
      targetPort: 7000
  selector:
    io.kompose.service: server3
status:
  loadBalancer: {}
