k8s/ingress-to-backend.yml
apiVersion: apps/v1
kind: NetworkPolicy
metadata:
  name: ingress-to-backend
  namespace: development
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: io.kompose.network/app-network=true,io.kompose.service=client,pod-template-hash=7c765f77f
    ports:
    - port: 4000
      protocol: TCP
  podSelector:
    matchLabels:
      name: io.kompose.network/app-network=true,io.kompose.service=server,pod-template-hash=58786d4f89
  policyTypes:
  - Ingress
  - Egress
